MS-703 Add error for used or invalid student information link
