# server/src/openapi/openapi.yaml
@@ -4470,7 +4470,7 @@ paths:
               operationId: getRegistration
               parameters:
                 schoolId: '$request.path.schoolId'
-                personnelId: '$request.path.registrationId'
+                registrationId: '$request.path.registrationId'
               description: >
                 The `Registration` object can be retrieved by doing a `GET`
                 to the current URL
@@ -5518,6 +5518,220 @@ paths:
         connectionType: "VPC_LINK"
         connectionId: "$${stageVariables.vpc_link_id}"
         httpMethod: "DELETE"
+        type: "http"
+
+  # /api/v1/schools/{schoolId}/students/{studentId}/registrations/{registrationId} -
+  /api/v1/schools/{schoolId}/students/{studentId}/registrations/{registrationId}:
+    parameters:
+      - in: header
+        name: Authorization
+        schema:
+          type: string
+      - in: path
+        name: schoolId
+        schema:
+          type: string
+          format: uuid
+        required: true
+        description: The id of the desired school
+      - in: path
+        name: studentId
+        schema:
+          type: string
+          format: uuid
+        required: true
+        description: The id of the desired student
+      - in: path
+        name: registrationId
+        schema:
+          type: string
+          format: uuid
+        required: true
+        description: The if the desired registration
+
+    # OPTIONS for /api/v1/schools/{schoolId}/students/{studentId}/registrations/{registrationId}
+    options:
+      tags:
+        - school
+        - student
+      responses:
+        200:
+          description: Success
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: "string"
+            Access-Control-Allow-Methods:
+              schema:
+                type: "string"
+            Access-Control-Allow-Headers:
+              schema:
+                type: "string"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Empty'
+      x-amazon-apigateway-auth:
+        type: None
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        passthroughBehavior: "when_no_match"
+        type: "mock"
+
+    # GET for /api/v1/schools/{schoolId}/students/{studentId}/registrations/{registrationId}
+    get:
+      summary: Get a student for a school
+      description: Get a student for a school
+      tags:
+        - school
+        - student
+      operationId: getStudentRegistration
+      responses:
+        200:
+          description: A student registration
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StudentRegistrationResultModel'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/NotAuthenticated'
+        403:
+          $ref: '#/components/responses/NotAuthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/Error'
+      x-amazon-apigateway-auth:
+        type: None
+      x-amazon-apigateway-integration:
+        uri: "${lb_url}/api/v1/schools/{schoolId}/students/{studentId}/registrations/{registrationId}"
+        responses:
+          200:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+          400:
+            statusCode: "400"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+          401:
+            statusCode: "401"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+          403:
+            statusCode: "403"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+          404:
+            statusCode: "404"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+          default:
+            statusCode: "500"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+        requestParameters:
+          integration.request.header.Authorization: "method.request.header.Authorization"
+          integration.request.header.X-Forwarded-Proto: "'https'"
+          integration.request.path.schoolId: "method.request.path.schoolId"
+          integration.request.path.studentId: "method.request.path.studentId"
+          integration.request.path.registrationId: "method.request.path.registrationId"
+          integration.request.header.X-Forwarded-Host: "stageVariables.api_url"
+        passthroughBehavior: "when_no_match"
+        connectionType: "VPC_LINK"
+        connectionId: "$${stageVariables.vpc_link_id}"
+        httpMethod: "GET"
+        type: "http"
+
+    # PUT for /api/v1/schools/{schoolId}/students/{studentId}/registrations/{registrationId}
+    put:
+      summary: Update a student registration
+      description: Update the student registration with the given id
+      tags:
+        - school
+        - student
+      operationId: updateStudentRegistration
+      requestBody:
+        description: The updated student registration
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StudentRegistrationModel'
+      responses:
+        200:
+          description: The student registration was updated
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StudentRegistrationResultModel'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/NotAuthenticated'
+        403:
+          $ref: '#/components/responses/NotAuthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/Error'
+      x-amazon-apigateway-auth:
+        type: None
+      x-amazon-apigateway-integration:
+        uri: "${lb_url}/api/v1/schools/{schoolId}/students/{studentId}/registrations/{registrationId}"
+        responses:
+          200:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+          400:
+            statusCode: "400"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+          401:
+            statusCode: "401"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+          403:
+            statusCode: "403"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+          404:
+            statusCode: "404"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+          default:
+            statusCode: "500"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+        requestParameters:
+          integration.request.header.Authorization: "method.request.header.Authorization"
+          integration.request.header.X-Forwarded-Proto: "'https'"
+          integration.request.path.schoolId: "method.request.path.schoolId"
+          integration.request.path.studentId: "method.request.path.studentId"
+          integration.request.path.registrationId: "method.request.path.registrationId"
+          integration.request.header.X-Forwarded-Host: "stageVariables.api_url"
+        passthroughBehavior: "when_no_match"
+        connectionType: "VPC_LINK"
+        connectionId: "$${stageVariables.vpc_link_id}"
+        httpMethod: "PUT"
         type: "http"
 
   # /api/v1/schools/{schoolId}/teachers --------------------------------------------
@@ -6656,7 +6870,7 @@ components:
         example: EMAIL
       teacher:
         type: string
-      preferredSEssion:
+      preferredSession:
         type: string
       emergencyContactFirstName:
         type: string
@@ -6954,6 +7168,106 @@ components:
               items:
                 allOf:
                   - $ref: '#/components/schemas/StudentResultModel'
+
+    # StudentRegistrationModel -----------------------------------------------------
+    StudentRegistrationModel:
+      type: object
+      properties:
+        behaviors:
+          type: array
+          items:
+            allOf:
+              - $ref: '#/components/schemas/NameModel'
+        leadershipSkills:
+          type: array
+          items:
+            allOf:
+              - $ref: '#/components/schemas/NameModel'
+        leaderTraits:
+          type: array
+          items:
+            allOf:
+              - $ref: '#/components/schemas/NameModel'
+        teacherComment:
+          type: string
+        question1:
+          type: number
+        question2:
+          type: number
+        question3:
+          type: number
+        question4:
+          type: number
+        question5:
+          type: number
+        question6:
+          type: number
+        question7:
+          type: number
+        question8:
+          type: number
+        question9:
+          type: number
+        question10:
+          type: number
+        question11:
+          type: number
+        question12:
+          type: number
+        question13:
+          type: number
+        question14:
+          type: number
+        question15:
+          type: number
+        question16:
+          type: number
+        question17:
+          type: number
+        question18:
+          type: number
+        question19:
+          type: number
+        question20:
+          type: number
+        question21:
+          type: number
+        question22:
+          type: number
+        question23:
+          type: number
+        question24:
+          type: number
+        question25:
+          type: number
+        question26:
+          type: number
+        question27:
+          type: number
+        question28:
+          type: number
+        question29:
+          type: number
+        question30:
+          type: number
+        question31:
+          type: number
+        question32:
+          type: number
+        question33:
+          type: number
+        question34:
+          type: number
+        question35:
+          type: number
+
+    # StudentRegistrationResultModel -----------------------------------------------
+    StudentRegistrationResultModel:
+      type: object
+      properties:
+        studentName:
+          type: string
+          example: Sally Student
 
     # StudentTeacherModel ----------------------------------------------------------
     StudentTeacherModel:
